tests/snapshots/yaml_suite_snapshots__yaml_suite_DC7X_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Various trailing tabs
  from: "@perlpunk"
  tags: comment whitespace
  yaml: "a: b———»\nseq:———»\n - a———»\nc: d———»#X\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL :b\n   =VAL :seq\n   +SEQ\n    =VAL :a\n   -SEQ\n   =VAL :c\n   =VAL :d\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": \"b\",\n  \"seq\": [\n    \"a\"\n  ],\n  \"c\": \"d\"\n}\n"
  dump: "a: b\nseq:\n- a\nc: d\n"
