tests/snapshots/yaml_suite_snapshots__yaml_suite_DE56_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Trailing tabs in …
  from: "@ingydotnet"
  tags: double whitespace
  yaml: "\"1 trailing\\t\n   …"
  tree: "+STR\n +DOC\n  =VAL…"
  json: "1 trailing\t tab…
  dump: "1 trailing\t tab…
- yaml: "3 trailing\————»…
  tree: "+STR\n +DOC\n  =VAL…"
  json: "3 trailing\t tab…
  dump: "3 trailing\t tab…
- yaml: "4 trailing\————»…
  tree: "+STR\n +DOC\n  =VAL…"
  json: "4 trailing\t ta…
  dump: "4 trailing\t ta…
- yaml: "\"6 trailing—»␣␣\n…"
  tree: "+STR\n +DOC\n  =VA…"
  json: "6 trailing tab"…
  dump: "6 trailing tab"…
# 2 more items
