tests/snapshots/yaml_suite_snapshots__yaml_suite_DFF7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "explicit: entry\nimplicit: entry\n:\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2791260"
  name: Spec Example 7.16. Flow Mapping Entries
  tags: explicit-key spec flow mapping
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :explicit\n   =VAL :entry\n   =VAL :implicit\n   =VAL :entry\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: "{\n? explicit: entry,\nimplicit: entry,\n?\n}\n"
